app/assets/stylesheets/prototype.scss
$background: url(/assets/bg/geometry.png) #f2eedc;
$card: url(/assets/bg/knit2.png);
$card2: url(/assets/bg/knit3.png);
$card3: url(/assets/bg/knit4.png);
$card4: url(/assets/bg/knit5.png);
$highlight: #9ACD6C;
$transLight: rgba(247,245,235,.75);
$royal: #361984;
$lightPurple: #B4ACD1;
$lightBlue: #A1D1E2;
$lightGreen: #B2CC96;
$lightRed: #E2ACA1;
$coral: #ED9685;
$lilaLight: rgba(180, 172, 209, .25);

@mixin background-clip($clip) {
  -webkit-background-clip: $clip;
     -moz-background-clip: $clip;
          background-clip: $clip;
}

body {
	background: $background;
}
fieldset {
	border: none;
	padding: none !important;
}
section[class*='screen'] {
  text-align: center;
}

.screen--main {


}
.screen--character {
  .character {
    min-height: 5em;
    border-radius: 2em;
    border: .5em double $lightPurple;
  	
	&:nth-child(1) {
		background: $card;
		@include background-clip(padding-box);
	}
  	&:nth-child(2) {
		background: $card2;
		@include background-clip(padding-box);
		border-color: $lightBlue;
	}
  	&:nth-child(3) {
		background: $card3;
		@include background-clip(padding-box);
		border-color: $lightGreen;
	}
  	&:nth-child(4) {
		background: $card4;
		@include background-clip(padding-box);
		border-color: $lightRed;
	}
    p {
      text-align: center;
    }
    &.selected {
	  border: .5em double $royal;
	  @include background-clip(padding-box);
    }
	

    .information {
      display: none;
      background: $transLight;
      border-radius: 1.75em;
	  padding: 1em;
      position: absolute;
      min-height: 5em;
      z-index: 10;

	  li {
		  list-style-type: none;
	  }
	  .label, .label label {
	  	  display: none;
	  }
    }
  }
}

.screen--feed {
  .feed-header {
    background: $transLight;
    padding: 1em;
    div:first-child {
      	text-align: left;
    }
	div:last-child {
		text-align: center;
	}
  }

}

.icon--character {
  width: 75%;
  margin: 0 auto;
}
.foods {
	padding: 1em;
	border-bottom: .1em dotted $coral;
	text-align: left;
	div:nth-child(4n-2) {
		text-align: center;
	}
}

.draggable {
	cursor: move;
}

.reveal-modal > :first-child { margin: 0 !important; }

